--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,9 @@
         <version.org.infinispan>5.0.0.FINAL</version.org.infinispan>
         <version.org.apache.http>4.0.3</version.org.apache.http>
         <version.junit>4.7</version.junit>
-        <version.arquillian>1.0.0.CR1</version.arquillian>
+        <version.arquillian>1.0.0.CR4</version.arquillian>
         <version.jboss.as7>7.1.0.Alpha2-SNAPSHOT</version.jboss.as7>
+        <version.jboss.maven.transformer>1.0.0-SNAPSHOT</version.jboss.maven.transformer>
         <version.metainf>1.1</version.metainf>
     </properties>
 
@@ -180,6 +181,20 @@
     <dependencyManagement>
         <!-- The parent pom manages the inter-dependencies of the modules. -->
         <dependencies>
+
+            <dependency>
+                <groupId>org.jboss.capedwarf.blue</groupId>
+                <artifactId>capedwarf-datastore</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <!-- Transform GAE code -->
+
+            <dependency>
+                <groupId>org.jboss.maven.plugins</groupId>
+                <artifactId>maven-transformer-plugin</artifactId>
+                <version>${version.jboss.maven.transformer}</version>
+            </dependency>
 
             <!-- Common code -->
 
