--- a/bytecode/pom.xml
+++ b/bytecode/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>capedwarf-datastore</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>capedwarf-mail</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
