--- a/bytecode/pom.xml
+++ b/bytecode/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>capedwarf-bytecode</artifactId>
     <packaging>jar</packaging>
-    <name>CapeDwarf Datastore</name>
+    <name>CapeDwarf Bytecode</name>
     <url>http://www.jboss.org/capedwarf</url>
     <description>CapeDwarf Bytecode</description>
 
