--- a/bytecode/pom.xml
+++ b/bytecode/pom.xml
@@ -32,6 +32,11 @@
 
         <dependency>
             <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>capedwarf-appidentity</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
             <artifactId>capedwarf-blobstore</artifactId>
         </dependency>
 
