--- a/common/pom.xml
+++ b/common/pom.xml
@@ -16,6 +16,11 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
