--- a/bytecode/pom.xml
+++ b/bytecode/pom.xml
@@ -100,6 +100,16 @@
             <artifactId>capedwarf-xmpp</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-search</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.infinispan</groupId>
+            <artifactId>infinispan-query</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
