--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,8 @@
         <version.javax.jpa2>1.0.0.Final</version.javax.jpa2>
         <version.org.datanucleus.jpa.spec>1.1.1</version.org.datanucleus.jpa.spec>
         <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
-        <version.org.infinispan>5.0.0.FINAL</version.org.infinispan>
+        <version.org.hibernate.search>3.4.0.Final</version.org.hibernate.search>
+        <version.org.infinispan>5.0.1.FINAL</version.org.infinispan>
         <version.junit>4.7</version.junit>
         <version.arquillian>1.0.0.CR4</version.arquillian>
         <version.jboss.as7>7.1.0.Alpha2-SNAPSHOT</version.jboss.as7>
@@ -375,6 +376,26 @@
                 <artifactId>infinispan-core</artifactId>
                 <version>${version.org.infinispan}</version>
                 <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.infinispan</groupId>
+                <artifactId>infinispan-query</artifactId>
+                <version>${version.org.infinispan}</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.infinispan</groupId>
+                <artifactId>infinispan-lucene-directory</artifactId>
+                <version>${version.org.infinispan}</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-search</artifactId>
+                <version>${version.org.hibernate.search}</version>
             </dependency>
 
             <dependency>
