--- a/bytecode/pom.xml
+++ b/bytecode/pom.xml
@@ -107,7 +107,7 @@
 
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-search</artifactId>
+            <artifactId>hibernate-search-engine</artifactId>
         </dependency>
 
         <dependency>
