--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
         <version.javax.jpa2>1.0.0.Final</version.javax.jpa2>
         <version.org.datanucleus.jpa.spec>1.1.1</version.org.datanucleus.jpa.spec>
         <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
-        <version.org.hibernate.search>3.4.0.Final</version.org.hibernate.search>
+        <version.org.hibernate.search>4.0.0.CR1</version.org.hibernate.search>
         <version.org.infinispan>5.1.0.BETA2</version.org.infinispan>
         <version.junit>4.7</version.junit>
         <version.arquillian>1.0.0.CR4</version.arquillian>
@@ -340,12 +340,6 @@
             </dependency>
 
             <dependency>
-                <groupId>com.google.appengine</groupId>
-                <artifactId>appengine-api-labs</artifactId>
-                <version>${version.com.google.gae.labs}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>org.json</groupId>
                 <artifactId>json</artifactId>
                 <version>${version.json}</version>
@@ -404,7 +398,7 @@
 
             <dependency>
                 <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-search</artifactId>
+                <artifactId>hibernate-search-engine</artifactId>
                 <version>${version.org.hibernate.search}</version>
             </dependency>
 
