Fix cache's CL, Search version.

--- a/datastore/pom.xml
+++ b/datastore/pom.xml
@@ -46,7 +46,7 @@
 
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-search</artifactId>
+            <artifactId>hibernate-search-engine</artifactId>
             <scope>provided</scope>
         </dependency>
 
