--- a/common/pom.xml
+++ b/common/pom.xml
@@ -33,6 +33,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.jboss.spec.javax.servlet</groupId>
+            <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+            <version>${version.org.jboss.spec.javax.servlet.api}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
