--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,12 @@
         <version.com.google.gae>1.5.5</version.com.google.gae>
         <version.com.google.gae.api>1.5.5</version.com.google.gae.api>
         <version.com.google.gae.labs>1.5.5</version.com.google.gae.labs>
-        <version.com.google.guava>1.0.0.R05</version.com.google.guava>
+        <version.com.google.guava>10.0.1</version.com.google.guava>
         <version.json>20090211</version.json>
         <version.org.jboss.seam>3.0.0.Final</version.org.jboss.seam>
-        <version.org.jboss.logging>3.1.0.Beta3</version.org.jboss.logging>
-        <version.org.jboss.xnio.xnio-api>3.0.0.Beta7</version.org.jboss.xnio.xnio-api>
-        <version.org.jboss.xnio.xnio-nio>3.0.0.Beta7</version.org.jboss.xnio.xnio-nio>
+        <version.org.jboss.logging>3.1.0.CR2</version.org.jboss.logging>
+        <version.org.jboss.xnio.xnio-api>3.0.0.CR5</version.org.jboss.xnio.xnio-api>
+        <version.org.jboss.xnio.xnio-nio>3.0.0.CR5</version.org.jboss.xnio.xnio-nio>
         <version.org.jboss.spec.javax.servlet.api>1.0.0.Final</version.org.jboss.spec.javax.servlet.api>
         <version.org.picketlink>1.0.4.final</version.org.picketlink>
         <version.javassist>3.14.0-GA</version.javassist>
@@ -57,11 +57,11 @@
         <version.javax.jpa2>1.0.0.Final</version.javax.jpa2>
         <version.org.datanucleus.jpa.spec>1.1.1</version.org.datanucleus.jpa.spec>
         <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
-        <version.org.hibernate.search>4.0.0.CR1</version.org.hibernate.search>
-        <version.org.infinispan>5.1.0.BETA2</version.org.infinispan>
+        <version.org.hibernate.search>4.0.0.Final</version.org.hibernate.search>
+        <version.org.infinispan>5.1.0.CR1</version.org.infinispan>
         <version.junit>4.7</version.junit>
-        <version.arquillian>1.0.0.CR4</version.arquillian>
-        <version.jboss.as7>7.1.0.Alpha2-SNAPSHOT</version.jboss.as7>
+        <version.arquillian>1.0.0.CR7</version.arquillian>
+        <version.jboss.as7>7.1.0.Final-SNAPSHOT</version.jboss.as7>
         <version.jboss.maven.transformer>1.0.0-SNAPSHOT</version.jboss.maven.transformer>
         <version.metainf>1.1</version.metainf>
         <version.org.apache.httpcomponents>4.1.1</version.org.apache.httpcomponents>
