--- a/pom.xml
+++ b/pom.xml
@@ -522,6 +522,12 @@
                 <scope>test</scope>
             </dependency>
 
+            <dependency>
+                <groupId>org.jboss.arquillian.protocol</groupId>
+                <artifactId>arquillian-protocol-servlet</artifactId>
+                <version>${version.arquillian}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
