--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>multitenancy</module>
         <module>oauth</module>
         <module>tasks</module>
+        <module>testsuite</module>
         <module>urlfetch</module>
         <module>users</module>
         <module>xmpp</module>
@@ -56,8 +57,11 @@
         <version.javax.cache>1.0-dev-2</version.javax.cache>
         <version.javax.mail>1.4</version.javax.mail>
         <version.javax.jpa2>1.0.0.Final</version.javax.jpa2>
-        <version.org.datanucleus.jpa.spec>1.1.1</version.org.datanucleus.jpa.spec>
+        <version.org.datanucleus.core>1.1.5</version.org.datanucleus.core>
+        <version.org.datanucleus.jpa>1.1.5</version.org.datanucleus.jpa>
         <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
+        <version.org.datanucleus.gae>1.0.10</version.org.datanucleus.gae>
+        <version.org.datanucleus.jdo>2.3-eb</version.org.datanucleus.jdo>
         <version.org.hibernate.search>4.0.0.Final</version.org.hibernate.search>
         <version.org.infinispan>5.1.0.CR3</version.org.infinispan>
         <version.junit>4.7</version.junit>
@@ -223,6 +227,12 @@
 
             <dependency>
                 <groupId>org.jboss.capedwarf.blue</groupId>
+                <artifactId>capedwarf-bytecode</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.capedwarf.blue</groupId>
                 <artifactId>capedwarf-capabilities</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -379,9 +389,28 @@
             </dependency>
 
             <dependency>
+                <groupId>org.datanucleus</groupId>
+                <artifactId>datanucleus-jpa</artifactId>
+                <version>${version.org.datanucleus.jpa}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.appengine.orm</groupId>
+                <artifactId>datanucleus-appengine</artifactId>
+                <version>${version.org.datanucleus.gae}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.datanucleus</groupId>
+                <artifactId>datanucleus-core</artifactId>
+                <version>${version.org.datanucleus.core}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
                 <groupId>com.google.appengine</groupId>
-                <artifactId>geronimo-jpa_3.0_spec</artifactId>
-                <version>${version.org.datanucleus.jpa.spec}</version>
+                <artifactId>jdo2-api</artifactId>
+                <version>${version.org.datanucleus.jdo}</version>
             </dependency>
 
             <dependency>
