--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <description>CapeDwarf Build</description>
 
     <modules>
+        <module>admin</module>
         <module>appidentity</module>
         <module>bytecode</module>
         <module>common</module>
@@ -54,6 +55,10 @@
         <version.slf4j>1.5.10</version.slf4j>
         <version.javax.validation>1.0.0.GA</version.javax.validation>
         <version.javax.servlet.jsp>2.1</version.javax.servlet.jsp>
+        <version.javax.faces.api>2.0.0.Beta1</version.javax.faces.api>
+        <version.javax.faces.impl>2.1.3-b02-jbossorg-2</version.javax.faces.impl>
+        <version.javax.el>1.2</version.javax.el>
+        <version.javax.el.impl>1.2</version.javax.el.impl>
         <version.javax.cache>1.0-dev-2</version.javax.cache>
         <version.javax.mail>1.4</version.javax.mail>
         <version.javax.jpa2>1.0.0.Final</version.javax.jpa2>
@@ -459,6 +464,37 @@
                 <artifactId>cdi-api</artifactId>
                 <version>${version.cdi.api}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.jboss.spec.javax.faces</groupId>
+                <artifactId>jboss-jsf-api_2.1_spec</artifactId>
+                <version>${version.javax.faces.api}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.sun.faces</groupId>
+                <artifactId>jsf-impl</artifactId>
+                <version>${version.javax.faces.impl}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.el</groupId>
+                <artifactId>el-api</artifactId>
+                <version>${version.javax.el}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.el</groupId>
+                <artifactId>el-ri</artifactId>
+                <version>${version.javax.el.impl}</version>
+            </dependency>
+
+
+            <!--<dependency>-->
+                <!--<groupId>org.jboss.weld.servlet</groupId>-->
+                <!--<artifactId>weld-servlet</artifactId>-->
+                <!--<version>${version.org.jboss.weld.servlet}</version>-->
+             <!--</dependency>-->
 
             <dependency>
                 <groupId>org.jboss.logging</groupId>
