--- a/pom.xml
+++ b/pom.xml
@@ -39,21 +39,21 @@
 
     <properties>
         <version.cdi.api>1.0-SP4</version.cdi.api>
-        <version.com.google.gae>1.6.1</version.com.google.gae>
-        <version.com.google.gae.api>1.6.1</version.com.google.gae.api>
-        <version.com.google.gae.labs>1.6.1</version.com.google.gae.labs>
+        <version.com.google.gae>1.6.2</version.com.google.gae>
+        <version.com.google.gae.api>1.6.2</version.com.google.gae.api>
+        <version.com.google.gae.labs>1.6.2</version.com.google.gae.labs>
         <version.com.google.guava>10.0.1</version.com.google.guava>
         <version.json>20090211</version.json>
         <version.org.jboss.seam>3.0.0.Final</version.org.jboss.seam>
-        <version.org.jboss.logging>3.1.0.CR2</version.org.jboss.logging>
-        <version.org.jboss.modules.jboss-modules>1.1.0.CR6</version.org.jboss.modules.jboss-modules>
-        <version.org.jboss.xnio.xnio-api>3.0.0.CR5</version.org.jboss.xnio.xnio-api>
-        <version.org.jboss.xnio.xnio-nio>3.0.0.CR5</version.org.jboss.xnio.xnio-nio>
+        <version.org.jboss.logging>3.1.0.GA</version.org.jboss.logging>
+        <version.org.jboss.modules.jboss-modules>1.1.1.GA</version.org.jboss.modules.jboss-modules>
+        <version.org.jboss.xnio.xnio-api>3.0.3.GA</version.org.jboss.xnio.xnio-api>
+        <version.org.jboss.xnio.xnio-nio>3.0.3.GA</version.org.jboss.xnio.xnio-nio>
         <version.org.jboss.spec.javax.servlet.api>1.0.0.Final</version.org.jboss.spec.javax.servlet.api>
         <version.org.picketlink>2.0.1.Final</version.org.picketlink>
         <version.org.picketlink.consolidated.social>2.0.0.Beta1</version.org.picketlink.consolidated.social>
-        <version.javassist>3.14.0-GA</version.javassist>
-        <version.slf4j>1.5.10</version.slf4j>
+        <version.javassist>3.15.0-GA</version.javassist>
+        <version.slf4j>1.6.1</version.slf4j>
         <version.javax.validation>1.0.0.GA</version.javax.validation>
         <version.javax.servlet.jsp>2.1</version.javax.servlet.jsp>
         <version.javax.faces.api>2.0.0.Beta1</version.javax.faces.api>
@@ -63,18 +63,17 @@
         <version.javax.cache>1.0-dev-2</version.javax.cache>
         <version.javax.mail>1.4</version.javax.mail>
         <version.javax.jpa2>1.0.0.Final</version.javax.jpa2>
-        <version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>1.0.0.Final
-        </version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>
+        <version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>1.0.0.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>
         <version.org.datanucleus.core>1.1.5</version.org.datanucleus.core>
         <version.org.datanucleus.jpa>1.1.5</version.org.datanucleus.jpa>
         <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
         <version.org.datanucleus.gae>1.0.10</version.org.datanucleus.gae>
         <version.org.datanucleus.jdo>2.3-eb</version.org.datanucleus.jdo>
-        <version.org.hibernate.search>4.0.0.Final</version.org.hibernate.search>
-        <version.org.infinispan>5.1.1.CR1</version.org.infinispan>
+        <version.org.hibernate.search>4.1.0.Beta1</version.org.hibernate.search>
+        <version.org.infinispan>5.1.1.FINAL</version.org.infinispan>
         <version.junit>4.7</version.junit>
         <version.arquillian>1.0.0.CR7</version.arquillian>
-        <version.jboss.as7>7.1.0.Final-SNAPSHOT</version.jboss.as7>
+        <version.jboss.as7>7.1.0.Final</version.jboss.as7>
         <version.jboss.maven.transformer>1.0.0-SNAPSHOT</version.jboss.maven.transformer>
         <version.metainf>1.1</version.metainf>
         <version.org.apache.httpcomponents>4.1.1</version.org.apache.httpcomponents>
