--- a/capabilities/pom.xml
+++ b/capabilities/pom.xml
@@ -18,7 +18,7 @@
 
         <dependency>
             <groupId>org.jboss.capedwarf.blue</groupId>
-            <artifactId>capedwarf-common</artifactId>
+            <artifactId>capedwarf-environment</artifactId>
         </dependency>
 
         <dependency>
