--- a/.gitignore
+++ b/.gitignore
@@ -8,15 +8,18 @@ blobstore/target/
 bytecode/target/
 capabilities/target/
 channel/target/
+cluster/target/
 cluster-tests/target/
 common/target/
 datastore/target/
+environment/target/
 files/target/
 images/target/
 mail/target/
 memcache/target/
 multitenancy/target/
 oauth/target/
+openshift/target/
 tasks/target/
 testsuite/target/
 urlfetch/target/
