--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>environment</module>
         <module>files</module>
         <module>images</module>
+        <module>log</module>
         <module>mail</module>
         <module>memcache</module>
         <module>multitenancy</module>
@@ -277,6 +278,12 @@
             <dependency>
                 <groupId>org.jboss.capedwarf.blue</groupId>
                 <artifactId>capedwarf-images</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.capedwarf.blue</groupId>
+                <artifactId>capedwarf-log</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
