--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
         <version.org.datanucleus.jdo>2.3-eb</version.org.datanucleus.jdo>
         <version.org.hibernate.search>4.1.0.Beta1</version.org.hibernate.search>
         <version.org.infinispan>5.1.2.FINAL</version.org.infinispan>
+        <version.net.jcip>1.0</version.net.jcip>
         <version.junit>4.7</version.junit>
         <version.arquillian>1.0.0.CR7</version.arquillian>
         <version.jboss.as7>7.1.0.Final</version.jboss.as7>
@@ -482,6 +483,12 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-search-engine</artifactId>
                 <version>${version.org.hibernate.search}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>net.jcip</groupId>
+                <artifactId>jcip-annotations</artifactId>
+                <version>${version.net.jcip}</version>
             </dependency>
 
             <dependency>
