More configurable purge DC.

--- a/bytecode/pom.xml
+++ b/bytecode/pom.xml
@@ -115,6 +115,12 @@
             <artifactId>infinispan-query</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>net.jcip</groupId>
+            <artifactId>jcip-annotations</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
